Mobile Portrait -> Footer Nav tweaks  - fixes the alignment… there was an extra 15px of dagum margin on the right

--- a/web/app/themes/teamjb/assets/styles/main.scss
+++ b/web/app/themes/teamjb/assets/styles/main.scss
@@ -246,7 +246,7 @@ $landscaping : "(orientation: landscape)" !default;
 	
 	/* Footer Tweaks */
 	.site-footer .bottom { padding-top:20px; margin-top:10px; }
-	.site-footer .nav > li { display:block; padding:5px 0; }
+	.site-footer .nav > li { display:block; padding:5px 0; margin-right:0px; }
 	.site-footer .nav > .menu-item > a{ font-size:14px; }
 	.site-footer .logo img { width:290px; }
 }   
